# hermes-skill-lazy-obsidian-vault

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.obsidian/: app.json
benchmarks/: bench_perf.py
docs/: compatibility.md  debugging-log.md  design.md  implementation-plan.md  installation.md
src/: __init__.py  cli.py  config.py  enricher.py  hooks.py  indexer.py  main.py  migrate.py  models.py  plugin.yaml  search.py  sync.py  tools.py  vault_ops.py
tests/: conftest.py  test_hooks.py  test_indexer.py  test_integration.py  test_mcp_server.py  test_migrate.py  test_models.py  test_search.py  test_tools.py  test_vault_ops.py
vault/_index/: README.md  apple.md  automation.md  autonomous-ai-agents.md  battle-core.md  battle-engine-integration.md  core.md  creative.md  data-science.md  devops.md  dogfood.md  email.md  fastapi-static-html.md  ffmpeg-video-truncation.md  finance-claw-workspace.md  frontend.md  game-development.md  gaming.md  github.md  leisure.md  mcp.md  media.md  mlops.md  nginx-proxy.md  note-taking.md  openclaw-imports.md  postgresql-migration-helper.md  productivity.md  project-management.md  red-teaming.md  research.md  seed-module-batch-management.md  smart-home.md  social-media.md  software-development.md  terminal-background-process.md  testing.md  ts-shared-pkg-compile-fix.md  ts57-typescript-compile-fix.md  typeorm-ddl-gen.md  (+5 more)
vault/_templates/: skill-template.md
vault/skills/: battle-core.md  battle-engine-integration.md  dogfood.md  fastapi-static-html.md  ffmpeg-video-truncation.md  finance-claw-workspace.md  (+12 more)
(+135 files in other folders)
