[project]
name = "obsidian-skill-vault"
version = "0.1.0"
description = "Hermes Plugin: Obsidian Vault-driven skill lazy loading"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "python-frontmatter>=1.0.0",
]

[project.optional-dependencies]
mcp = ["mcp>=0.9.0"]
dev = ["pytest>=7.0"]

[project.scripts]
obsidian-skill-vault = "src.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
